@@ -10,8 +10,6 @@ from Foundation import *
 from PyObjCTools import NibClassBuilder
 import objc
 
-import twisted.internet.cfreactor
-reactor = twisted.internet.cfreactor.install()
 from twisted.internet import defer
 from twisted.web.xmlrpc import Proxy
 
@@ -115,15 +113,11 @@ class WSTConnectionWindowController(NibClassBuilder.AutoBaseClass):
         self.progressIndicator.setDisplayedWhenStopped_(False)
 
         self.createToolbar()
-        # Start the CFReactor if it's not already going
-        if not reactor.running:
-            reactor.run()
 
     def windowWillClose_(self, aNotification):
         """
         Clean up when the document window is closed.
         """
-        reactor.stop()
         self.autorelease()
 
     def createToolbar(self):
