@@ -11,6 +11,9 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>Twisted examples changed to use threadedselectreactor instead
+of cfreactor.  cfreactor is deprecated.  Needs Twisted newer
+than 2.0 (currently svn r13575 or later).</li>
 <li><code><span>objc.inject</span></code> now injects on main thread by default,
 takes third useMainThread argument to change this behavior.
 Effectively a complete rewrite which should be more correct
